# hifir

./: .clang-format  .gitignore  AUTHORS  Array_8hpp.html  Array_8hpp.js  Array_8hpp__dep__incl.map  Array_8hpp__dep__incl.md5  Array_8hpp__incl.map  Array_8hpp__incl.md5  Array_8hpp_source.html  AugmentedStorage_8hpp.html  AugmentedStorage_8hpp__dep__incl.map  AugmentedStorage_8hpp__dep__incl.md5  AugmentedStorage_8hpp__incl.map  AugmentedStorage_8hpp__incl.md5  AugmentedStorage_8hpp_source.html  CHANGELOG.md  CHANGELOG_8md.html  CHANGELOG_8md_source.html  CMakeLists.txt  CompressedStorage_8hpp.html  CompressedStorage_8hpp.js  CompressedStorage_8hpp__dep__incl.map  CompressedStorage_8hpp__dep__incl.md5  CompressedStorage_8hpp__incl.map  CompressedStorage_8hpp__incl.md5  CompressedStorage_8hpp_source.html  Crout_8hpp.html  Crout_8hpp__dep__incl.map  Crout_8hpp__dep__incl.md5  Crout_8hpp__incl.map  Crout_8hpp__incl.md5  Crout_8hpp_source.html  DenseMatrix_8hpp.html  DenseMatrix_8hpp__dep__incl.map  DenseMatrix_8hpp__dep__incl.md5  DenseMatrix_8hpp__incl.map  DenseMatrix_8hpp__incl.md5  DenseMatrix_8hpp_source.html  EqlDriver_8hpp.html  (+1933 more)
.github/workflows/: github-actions.yml
bench/: GMRES.hpp  GMRES_MT.hpp  Makefile  README.md  driver.cpp
bench/tests/: Makefile  test_std.cpp
benchmark/: BJacobi.hpp  GMRES.hpp  GMRES_MT.hpp  Makefile  README.md  driver.cpp  driver_defer.cpp  makefile  mt_scaling_analysis.cpp  parameters.cfg
benchmark/parameters/: par1.cfg  par4.cfg  par5.cfg
c/: PSMILU.cpp  PSMILU.h
cmake/: hifConfig.cmake  hilucsiConfig.cmake  macros.hpp.in
deprecated/: FGMRES.hpp  psmilu_Array.hpp  psmilu_DeferredCrout.hpp  psmilu_DeferredCrout_thin.hpp  psmilu_DenseMatrix.hpp  psmilu_PermMatrix.hpp  psmilu_Timer.hpp  psmilu_fac.hpp  psmilu_fac_defer_thin.hpp  psmilu_fc_mangling.h  psmilu_inv_thres.hpp  psmilu_matrix_market.hpp  psmilu_prec_solve.hpp
deprecated/benchmark/: GMRES_MT.hpp
deprecated/psmilu_AMD/: README.md  amd_config.hpp  driver.hpp
deprecated/psmilu_BGL/: graph.hpp
deprecated/psmilu_lapack/: config.h
deprecated/psmilu_matching/: HSL_MC64.hpp  MC64.hpp  MUMPS.hpp  common.hpp  driver.hpp
deprecated/psmilu_small_scale/: SmallScaleBase.hpp
deprecated/tests/: Makefile  README.md  common.hpp  get_deps.sh  test_alg.cpp  test_array.cpp  test_augcrs_acc.cpp  test_build_aug.cpp  test_crout_np_leading.cpp  test_cs_convert.cpp  test_cs_perm.cpp  test_extract.cpp  test_fac_utils.cpp  test_mc64_extract.cpp  test_rotate.cpp  test_scale_diag_ccs.cpp  test_scale_diag_crs.cpp  test_setting_opts.cpp  test_spvec.cpp  test_sss_lup.cpp
deprecated/tools/: matlab2psmilu
docs/: README.md
docs/doxygen/: Doxyfile  Doxyfile.cfg  DoxyfileXML  DoxygenLayout.xml  Makefile  README.md  (+1 more)
examples/: Makefile  README.md  demo.cpp  demo_libhifir.cpp  demo_utils.hpp
include/: psmilu_Array.hpp  psmilu_AugmentedStorage.hpp  psmilu_CompressStorage.hpp  psmilu_CompressedStorage.hpp  psmilu_DenseMatrix.hpp  psmilu_SparseVec.hpp  psmilu_Timer.hpp  psmilu_log.hpp  psmilu_matrix_market.hpp  psmilu_print.hpp  psmilu_stacktrace.hpp  psmilu_utils.hpp
libhifir/: .gitignore  Makefile  Makefile.am  README.md  configure.ac  libhifir.cpp  libhifir.h
libhifir/include/: libhifir.h
libhifir/src/: libhifir.cpp
libhifir/tests/: Makefile  README.md  demo_real.c  test_complex.c  test_real.c
python/: MANIFEST.in  README.md  README.rst  conf.py  exts.py  requirements.txt  setup.cfg  setup.py
python/hilucsi4py/: Options.pxd  PSMILU.pyx  __init__.pxd  __init__.py  _hilucsi4py.pyx  file_dp.pxd  file_dp.pyx  hilucsi4py.hpp  psmilu4py.hpp  utils.py  utils.pyx
python/hilucsi4py/scipy/: __init__.py  io.py  prec.py  utils.py
python/psmilu4py/: Options.pxd  Options.pyx  PSMILU.pxd  PSMILU.pyx  PyBuilder.pxd  PyBuilder.pyx  __init__.pxd  __init__.py  common.hpp  io.pyx  psmilu4py.hpp  utils.pyx
python/psmilu4py/scipy/: __init__.py  builder.py  io.py  utils.py
python/tests/: test_bicgstab.py  test_fqmrcgstab.py  test_fqmrcgstab_mixed.py  test_mixed.py  test_pars.py  test_random.py  test_tgmresr.py  test_tgmresr_mixed.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+112 more)
src/: HIF.hpp  HILUCSI.hpp  PSMILU.hpp  hifir.hpp  psmilu_Array.hpp  psmilu_AugmentedStorage.hpp  psmilu_Builder.hpp  psmilu_CompressedStorage.hpp  psmilu_Crout.hpp  psmilu_DeferredCrout.hpp  psmilu_DenseMatrix.hpp  psmilu_Options.h  psmilu_PermMatrix.hpp  psmilu_PivotCrout.hpp  psmilu_Prec.hpp  psmilu_Schur.hpp  psmilu_Schur2.hpp  psmilu_SparseVec.hpp  psmilu_Timer.hpp  psmilu_diag_pivot.hpp  psmilu_fac.hpp  psmilu_fac_defer.hpp  psmilu_fac_defer_thin.hpp  psmilu_fac_pvt.hpp  psmilu_inv_thres.hpp  psmilu_log.hpp  psmilu_macros.hpp  psmilu_matrix_market.hpp  psmilu_native_io.hpp  psmilu_pivot.hpp  psmilu_pre.hpp  psmilu_prec_solve.hpp  psmilu_print.hpp  psmilu_stacktrace.hpp  psmilu_utils.hpp  psmilu_version.h
tests/: Makefile  README.md  common.hpp  get_deps.sh  test_alg.cpp  test_array.cpp  test_augccs_acc.cpp  test_augccs_interchange.cpp  test_augcrs_interchange.cpp  test_augcs.cpp  test_augcs_interchange.cpp  test_bjcb_simple_block.cpp  test_builder.cpp  test_ccs.cpp  test_crout_np.cpp  test_crout_np_leading.cpp  test_crout_symm_np.cpp  test_crout_symm_np_leading.cpp  test_crs.cpp  test_cs_convert.cpp  test_cs_perm.cpp  test_cs_split.cpp  test_cs_split_dual.cpp  test_cs_tri.cpp  test_defer1.cpp  test_dense.cpp  test_diag_cond.cpp  test_drop.cpp  test_drop_LE_UF.cpp  test_fac_utils.cpp  test_file_info.cpp  test_graph_part.cpp  test_heev.cpp  test_interval_mv.cpp  test_interval_tri.cpp  test_io_mm.cpp  test_io_mm_vec.cpp  test_is_intv.cpp  test_list_thin.cpp  test_lup_cmplx.cpp  (+27 more)
tools/: mm_cnvt.py
(+236 files in other folders)
