[metadata]
name = psmilu
author = Qiao Chen
author-email = benechiao@gmail.com
description = PSMILU Python3 Interface
long-description = file: README.rst
license-file = ../LICENSE
platform = linux
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research

[options]
setup_requires =
    setuptools
install_requires =
    numpy
    Cython
python_requires = >= 3.5
include_package_data = True

[flake8]
ignore = E226
max-line-length=80
