[metadata]
name = psmilu4py
author = Qiao Chen
author-email = qiao.chen@stonybrook.edu
description = PSMILU Python3 Interface
long-description = file: README.rst
platform = linux
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research

[options]
setup_requires =
    setuptools
install_requires =
    Cython
python_requires = >= 3.6
include_package_data = True

[flake8]
ignore = E226
max-line-length=80
