[metadata]
name = hilucsi4py
version = 1.0.0
author = NumGeom Group at Stony Brook University
description = HILUCSI Python3 Interface
long-description = file: README.rst
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
setup_requires =
    setuptools
install_requires =
    Cython
    numpy
    scipy
python_requires = >= 3.6
include_package_data = True
packages=find:

[flake8]
ignore =
    E226
    W503
    W504
    E203
max-line-length = 120
split_before_arithmetic_operator = true
exclude = tests/*
max-complexity = 12
